<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.UserProfileFragment">

    <EditText
        android:id="@+id/etUserSurname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/user_surname_hint"
        android:importantForAutofill="no"
        android:inputType="none"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imgvUser2"
        app:layout_constraintTop_toBottomOf="@id/etUserName" />

    <EditText
        android:id="@+id/etUserPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/user_phone_number_hint"
        android:importantForAutofill="no"
        android:inputType="none"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imgvUserPhone"
        app:layout_constraintTop_toBottomOf="@id/etUserSurname" />

    <ImageView
        android:id="@+id/imgvUserPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:src="@android:drawable/stat_sys_phone_call"
        android:contentDescription="@string/phone_icon"
        app:layout_constraintBottom_toBottomOf="@id/etUserPhone"
        app:layout_constraintEnd_toStartOf="@id/etUserPhone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/etUserPhone"
        app:tint="?attr/colorOnSurface" />

    <ImageView
        android:id="@+id/imgvUser2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:src="@drawable/ic_user"
        android:contentDescription="@string/user_icon__profile"
        app:layout_constraintBottom_toBottomOf="@id/etUserSurname"
        app:layout_constraintEnd_toStartOf="@id/etUserSurname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/etUserSurname"
        app:tint="?attr/colorOnSurface" />

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:cursorVisible="false"

        android:ems="10"
        android:focusable="false"
        android:hint="@string/user_name_hint"
        android:importantForAutofill="no"
        android:inputType="none"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imgvUser1"
        app:layout_constraintTop_toBottomOf="@id/tvTipsName2" />

    <ImageView
        android:id="@+id/imgvUser1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:src="@drawable/ic_user"
        android:contentDescription="@string/user_icon__profile"
        app:layout_constraintBottom_toBottomOf="@id/etUserName"
        app:layout_constraintEnd_toStartOf="@id/etUserName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/etUserName"
        app:tint="?attr/colorOnSurface" />

    <TextView
        android:id="@+id/tvTipsName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/tips_name"
        android:textSize="96sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>